Add awesome nacho logo. Fix typos

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,9 +1,8 @@
 // Colors
-$bg-color: #1a1b23;
-$text-color: #ffffff;
 $primary-color: #00af8f;
 $secondary-color: #025a4a;
 $white: white;
+$black: #1a1b23;
 
 // Font sizes
 $font-size-default: 1.5rem;
