--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,14 +1,18 @@
 // Colors
-$primary-color: #00af8f;
-$secondary-color: #025a4a;
-$white: white;
-$black: #1a1b23;
+$primary-color: #368b85;
+$navy: #464660;
+$moss: #b4b897;
+$beige: #f1e9e5;
+$warm-white: #fffbf9;
+$error-red: #ff4e4e;
 
 // Font sizes
-$font-size-default: 1.5rem;
-$font-size-m: 2.4rem;
-$font-size-l: 3rem;
-$font-size-xl: 4rem;
+$font-size-default: 1rem;
+$font-size-h2: 1.25em;
+$font-size-h1: 1.5rem;
+$font-size-title: 2.25rem;
+$font-size-button-title: 1.5rem;
+$font-size-big-number: 6rem;
 
 // Breakpoints
 $breakpoint-mobile: 500px;
